--- a/index.css
+++ b/index.css
@@ -212,9 +212,14 @@ body {
 
 .card .calendar {
   width: 100%;
+  margin-top: 20px;
 }
 
 .card .calendarBtn {
   margin: 10px auto 0 auto;
   border-radius: 10px;
+}
+
+.hide {
+  display: none;
 }
